[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "rattlesnake"
# version = "3.1.1"  # Deprecated use of hard-coded version numbers, now hatch-vcs
dynamic = ["version"]  # Removed static version, now determined by hatch-vcs
description = "Multiple-Input Multiple-Output Vibration Controller"
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  {email = "dprohe@sandia.gov", name = "Daniel P. Rohe"}
]
classifiers = [
    "Natural Language :: English",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Framework :: Pytest",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
    ]
dependencies = [
    "kaitaistruct",
    "netCDF4",
    "nidaqmx",
    "numpy",
    "openpyxl",
    "packaging",
    "PyQt5; sys_platform!='darwin'",
    "PyQt6; sys_platform=='darwin'",
    "pyqtgraph",
    "qtpy",
    "requests",
    "scipy",
    ]

[project.optional-dependencies]
dev = [
  "coverage-badge",
  "flake8",
  "isort",
  "jupyter-book>=2.0.0",
  "pylint",
  "pytest",
  "pytest-cov",
  "pytest-qt==4.4.0",
  "pytz",
  "ruff",
]

# Entry Points
[project.scripts]
rattlesnake = "rattlesnake.main:main"

[project.urls]
Documentation = "https://sandialabs.github.io/rattlesnake-vibration-controller"
Repository = "https://github.com/sandialabs/rattlesnake-vibration-controller"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"  # Ensures clean versions like 0.0.9 instead of 0.0.9+g1234567

[tool.hatch.build.targets.wheel]
packages = ["src/rattlesnake"]

[tool.pytest.ini_options]
python_files = ["test_*.py"]  # Ignores files without "test" prefix for pytest runs
testpaths = ["tests/"]
pythonpath = ["src", "tests"]

[tool.ruff]
line-length = 100
